adding info on xss and xsrf

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -18,6 +18,7 @@
 		  <li>Sorting</li>
 		  <li>https://www.geeksforgeeks.org/javascript-array-sort/</li>
 		  <li>https://www.w3schools.com/js/tryit.asp?filename=tryjs_array_sort2</li>
+		  <li>https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/sort</li>
 		  <li>https://khan4019.github.io/front-end-Interview-Questions/sort.html</li>
 		  <li>Binary Search</li>
 		  <li><iframe width="300" height="160" src="https://www.youtube.com/embed/P3YID7liBug" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
@@ -177,7 +178,7 @@ What algorithms tend to work with each data structure?
 		</ol> 
   </li>
 
-</ol> 
+</ol>
 
 <h3>Computational Complexity</h3>
 	<h4>Know Computational complexity, their tradeoffs and how to implement them in real code.</h4>
@@ -216,8 +217,11 @@ What algorithms tend to work with each data structure?
 <h3>Be ready to talk about anything listed below</h3>
 	<ol>
 			<li>Web Security issues</li>
-					XSS
-					XSRF
+			<ol>
+				<li>XSS</li>
+				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/x6I5fCupLLU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+				<li>XSRF</li>
+			</ol>
 			<li>Prototypal Inheritance</li>
 			<li>DOM API & Manipulation</li>
 			<li>CSS Manipulation</li>
